# clean-fastapi

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
docker/: dev.yml
src/: Dockerfile  alembic.ini  main.py  manage.py
src/api/v1/: __init__.py
src/api/v1/auth/: __init__.py  auth.py
src/api/v1/monitoring/: health.py
src/api/v1/users/: user.py
src/api/ws/demo/: __init__.py  test.py
src/app/handlers/: auth.py  user.py
src/app/models/: user.py
src/app/repositories/: user.py
src/app/schemas/: auth.py  user.py
src/app/services/: user.py
src/config/: database.py  server.py  settings.py
src/core/: exceptions.py  jwt.py  logger.py
src/core/dependencies/: authentication.py  current_user.py
src/core/middleware/: __init__.py  authentication.py  session.py  sqlalchemy.py
src/core/repository/: base.py
src/migrations/: README.md  env.py
src/migrations/versions/: 43a19d59c1c2_change_default_user_active_status.py  649cc3957cec_user_model_added.py
src/requirements/: prod.txt
